# simplex-lectures-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manim.cfg  pyproject.toml  renovate.json  ruff.toml  site.toml
.claude/skills/manimce-best-practices/: SKILL.md
.claude/skills/manimce-best-practices/examples/: 3d_visualization.py  basic_animations.py  graph_plotting.py  lorenz_attractor.py  math_visualization.py  updater_patterns.py
.claude/skills/manimce-best-practices/references/: api-index.md
.claude/skills/manimce-best-practices/rules/: 3d.md  animations.md  camera.md  cli.md  colors.md  config.md  decorations.md  equation-derivations.md  equations.md  first-scene-tutorial.md  graphing.md  grouping.md  latex.md  manim-slides-cli.md  manim-slides-overview.md  manim-slides-web.md  matrices-linalg.md  mobjects.md  opengl.md  positioning.md  scenes.md  shapes.md  text.md  troubleshooting.md  updaters.md
.claude/skills/manimce-best-practices/templates/: basic_scene.py  camera_scene.py  equation_explainer.py  paper_explainer.py  (+2 more)
.github/workflows/: ci.yml  deploy.yml  update-simplex.yml
decks/_example/: deck.toml  refs.bib
decks/_example/slides/: intro.py
decks/example/: deck.toml  manim.cfg  notes.md
decks/example/slides/: __init__.py  intro.py
decks/showcase/: deck.toml  notes.md
decks/showcase/slides/: __init__.py  paper_showcase.py  scenes.py  showcase_style.py  surface_showcase.py
simplex_themes/: README.md
simplex_themes/code_styles/: README.md
simplex_themes/palette_styles/: README.md
simplex_themes/themes/: README.md
(+3 files in other folders)
